--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
   </head>
 
   <body>
-    <div id="root"></div>
+    <div id="root" style="color: white; font-family: sans-serif; padding: 20px;">
+      <h1>Loading Application...</h1>
+      <p>If this persists, JavaScript may have failed to load.</p>
+    </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
